tests/langs/snapshots/r#mod__langs__base.rs_enum-variant.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 114
  l: "    VariantOne,\n"
  m: "    ^^^^^^^^^^   "
- n: 115
  l: "    VariantTwo(String),\n"
  m: "    ^^^^^^^^^^^^^^^^^^   "
- n: 116
  l: "    VariantThree { a: String, b: u64 },\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   "
