tests/langs/snapshots/r#mod__langs__base.rs_enum_named_PubSuperSelf.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 279
  l: "pub(self) enum PubSelfEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 280
  l: "pub(super) enum PubSuperEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
