tests/langs/snapshots/r#mod__langs__base.rs_extern-fn.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 295
  l: "extern \"C\" fn example_extern() -> i32 {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 296
  l: "    42\n"
  m: ^^^^^^^^
- n: 297
  l: "}\n"
  m: "^  "
