tests/langs/snapshots/r#mod__langs__base.rs_fn_named_pubsuperself.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 268
  l: "pub(self) fn function_pub_self() {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 270
  l: "pub(super) fn function_pub_super() {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 291
  l: "pub(self) const fn const_function_pub_self() {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 292
  l: "pub(super) const fn const_function_pub_super() {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
