tests/langs/snapshots/r#mod__langs__base.rs_fn_named_test.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 255
  l: "    fn some_test() {\n"
  m: "    ^^^^^^^^^^^^^^^^^^"
- n: 256
  l: "        assert_eq!(3, 3);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 257
  l: "    }\n"
  m: "^^^^^  "
- n: 261
  l: "    fn test_with_rstest(#[case] i: u64) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 262
  l: "        assert_eq!(1337, 1337);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 263
  l: "    }\n"
  m: "^^^^^  "
