tests/langs/snapshots/r#mod__langs__base.rs_impl-fn.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 77
  l: "    fn new() -> Self {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^"
- n: 78
  l: "        TestStruct {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 79
  l: "            instance_var: String::from(\"hello\"),\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 80
  l: "        }\n"
  m: ^^^^^^^^^^^
- n: 81
  l: "    }\n"
  m: "^^^^^  "
- n: 88
  l: "    fn static_decorator<F>(func: F) -> impl Fn()\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 89
  l: "    where\n"
  m: ^^^^^^^^^^^
- n: 90
  l: "        F: Fn(),\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 91
  l: "    {\n"
  m: ^^^^^^^
- n: 92
  l: "        // Decorator for static methods.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 93
  l: "        move || {\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 94
  l: "            println!(\"Static method decorator called\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 95
  l: "            func();\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 96
  l: "        }\n"
  m: ^^^^^^^^^^^
- n: 97
  l: "    }\n"
  m: "^^^^^  "
- n: 100
  l: "    fn instance_method(&mut self) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 101
  l: "        // Instance method.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 102
  l: "        self.instance_var = \"Instance variable\".to_string();\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 103
  l: "        println!(\"Instance variable is {}\", self.instance_var);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 104
  l: "    }\n"
  m: "^^^^^  "
- n: 106
  l: "    fn static_method() {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^"
- n: 107
  l: "        // Static method.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 108
  l: "        println!(\"Inside static method\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 109
  l: "    }\n"
  m: "^^^^^  "
- n: 120
  l: "    fn match_statement(x: TestEnum) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 121
  l: "        // Function demonstrating match statement.\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 122
  l: "        match x {\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 123
  l: "            TestEnum::VariantOne => println!(\"One\"),\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 124
  l: "            TestEnum::VariantTwo => println!(\"Two\"),\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 125
  l: "            TestEnum::VariantOther => println!(\"Other\"),\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 126
  l: "        }\n"
  m: ^^^^^^^^^^^
- n: 127
  l: "    }\n"
  m: "^^^^^  "
- n: 315
  l: "    fn convert(&self) -> U {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 316
  l: "        U::from(self.as_ref().to_owned())\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 317
  l: "    }\n"
  m: "^^^^^  "
