tests/langs/snapshots/r#mod__langs__base.rs_impl-trait.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 310
  l: "impl<T, U> Convertible<U> for T\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 311
  l: "where\n"
  m: ^^^^^^^
- n: 312
  l: "    T: AsRef<str>,\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 313
  l: "    U: From<String>,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 314
  l: "{\n"
  m: ^^^
- n: 315
  l: "    fn convert(&self) -> U {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 316
  l: "        U::from(self.as_ref().to_owned())\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 317
  l: "    }\n"
  m: ^^^^^^^
- n: 318
  l: "}\n"
  m: "^  "
- n: 320
  l: "impl X for Y {}\n"
  m: "^^^^^^^^^^^^^^^  "
- n: 321
  l: "impl<T> X for Y<T> {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^  "
- n: 322
  l: "impl<T> X<T> for Y {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^  "
