tests/langs/snapshots/r#mod__langs__base.rs_mod-tests.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 251
  l: "mod tests {\n"
  m: ^^^^^^^^^^^^^
- n: 252
  l: "    use super::*;\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 253
  l: "\n"
  m: ^^
- n: 254
  l: "    #[test]\n"
  m: ^^^^^^^^^^^^^
- n: 255
  l: "    fn some_test() {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 256
  l: "        assert_eq!(3, 3);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 257
  l: "    }\n"
  m: ^^^^^^^
- n: 258
  l: "\n"
  m: ^^
- n: 259
  l: "    #[rstest]\n"
  m: ^^^^^^^^^^^^^^^
- n: 260
  l: "    #[case(3)]\n"
  m: ^^^^^^^^^^^^^^^^
- n: 261
  l: "    fn test_with_rstest(#[case] i: u64) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 262
  l: "        assert_eq!(1337, 1337);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 263
  l: "    }\n"
  m: ^^^^^^^
- n: 264
  l: "}\n"
  m: "^  "
