tests/langs/snapshots/r#mod__langs__base.rs_mod.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 15
  l: "mod parent {\n"
  m: ^^^^^^^^^^^^^^
- n: 16
  l: "    pub fn x() {\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 17
  l: "        println!(\"Function x from parent module\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 18
  l: "    }\n"
  m: ^^^^^^^
- n: 19
  l: "}\n"
  m: "^  "
- n: 21
  l: "mod sibling {\n"
  m: ^^^^^^^^^^^^^^^
- n: 22
  l: "    pub fn y() {\n"
  m: ^^^^^^^^^^^^^^^^^^
- n: 23
  l: "        println!(\"Function y from sibling module\");\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 24
  l: "    }\n"
  m: ^^^^^^^
- n: 25
  l: "}\n"
  m: "^  "
- n: 247
  l: "mod tests {\n"
  m: ^^^^^^^^^^^^^
- n: 248
  l: "    use super::*;\n"
  m: ^^^^^^^^^^^^^^^^^^^
- n: 249
  l: "\n"
  m: ^^
- n: 250
  l: "    #[test]\n"
  m: ^^^^^^^^^^^^^
- n: 251
  l: "    fn some_test() {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^
- n: 252
  l: "        assert_eq!(3, 3);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 253
  l: "    }\n"
  m: ^^^^^^^
- n: 254
  l: "\n"
  m: ^^
- n: 255
  l: "    #[rstest]\n"
  m: ^^^^^^^^^^^^^^^
- n: 256
  l: "    #[case(3)]\n"
  m: ^^^^^^^^^^^^^^^^
- n: 257
  l: "    fn test_with_rstest(#[case] i: u64) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 258
  l: "        assert_eq!(1337, 1337);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 259
  l: "    }\n"
  m: ^^^^^^^
- n: 260
  l: "}\n"
  m: "^  "
